fix(@fem-aec/static-website): header logo should be left aligned on tablets or greater devices

--- a/apps/static-website/src/assets/styles/components/header.scss
+++ b/apps/static-website/src/assets/styles/components/header.scss
@@ -20,6 +20,7 @@
     border-bottom: 1px solid var(--fem-color-border-primary);
 
     @media screen and (min-width: 768px) {
+      gap: 42px;
       margin: 0 auto;
       padding-left: 0;
       padding-right: 0;
@@ -30,6 +31,12 @@
       padding-top: 3.2rem;
       padding-bottom: 3.6rem;
       width: 77.11%;
+    }
+  }
+
+  &__logo {
+    @media screen and (min-width: 768px) {
+      margin-right: auto;
     }
   }
 
